--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -120,3 +120,51 @@ footer {
     text-align: center;
 }
 
+.profile-img, .gallery-container img {
+    /* width: 100%; */
+    height: auto; 
+    border-radius: 5px; 
+}
+
+
+nav {
+    background-color: #9ad3bc; 
+    text-align: center; 
+    padding: 10px 0; 
+}
+
+nav ul {
+    list-style-type: none; 
+    padding: 0; 
+    margin: 0; 
+}
+
+nav ul li {
+    display: inline-block; 
+    margin-right: 20px; 
+}
+
+nav ul li a {
+    text-decoration: none; 
+    color: white; 
+    font-weight: bold; 
+    font-size: 16px; 
+}
+
+@media (max-width: 768px){
+  nav ul li{
+    display: block;
+    margin-bottom: 3px;
+  }
+  .profile-img{
+    width: 100%;
+  }
+  .profile, .bio, .gallery{
+    padding: 30px;
+  }
+  .contact-form form{
+        display: flex;
+        flex-direction: column;
+    
+  }
+}
